|      |  |  |     |  _  |     |  |
|  |___|  |  |  |  |    _|  |  |  |    GNU GLOBAL source code tag system
|  |   |  |  |  |  |     |     |  |
|  ~~  |   ~~|     |  ~  |  |  |   ~~|          for all hackers.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

ChangeLog about GNU GLOBAL

********* 2000, Shigio Yamaguchi  <shigio@tamacom.com>

	* config variable HAVE_SNPRINTF and AC_FUNC_ALLOCA added.
	* htags.pl: the value of id changed from src directory
	  to HTML directory.
	* libutil/conf.c: error check added.

September 26 2000, Shigio Yamaguchi  <shigio@tamacom.com>

	* htags.pl: use generated path of perl for global.cgi.
	* global.1, htags.1, btreeop.1: fix missing .El.
	* make version number 'major.minor.fixed'.

September 3 2000, Shigio Yamaguchi  <shigio@tamacom.com>

	* license changed from BSD-style to GPL.
	* now generated automatically by automake and autoconf.
	* nvi-1.79-gtags.diff: put into the public domain.
	* htags.pl: command path in global.cgi becomes generated
	  at execution time. usable() changed to return path.
	* htags.pl: optimized about temporary database.
	* htags.pl: most code which depend on javascript are removed
	  because most of browsers don't support the language.
	* mgets.c: now belongs strbuf.c as strbuf_fgets().
	* strbuf.c: new argment 'initial buffer size' of strbuf_open().
	* global.conf: one line script for ctags-exuberant fixed.
	* Cpp.h, java.h: MAXCLASSSTACK changed from 10 to 100.
	* use snprintf(3) instead of sprintf(3). 
	* replace Henry Spencer's regex(3) with GNU's one.
	* gctags/C.c: ignore 'extern' to treat 'extern func() { ...}'. 
	* global.c: use grep(1) if grep and xargs(1) are available.
	* global.c: use find(1) if find is available.
	* gtags.el: reimplement as a minor mode (gtags-mode) and
	  a major mode (gtags-select-mode) to work with other major mode
	  like c-mode.
	  prefix 'gtags-' added to all functions to avoid conflicts with
	  other packages..

December 23, 1999, Shigio Yamaguchi  <shigio@tamacom.com>
